--- a/style.css
+++ b/style.css
@@ -637,6 +637,7 @@ h6 {
 
 .career-top__text {
   display: block;
+  text-align: center;  
   font-weight: 700;
   font-size: 14px;
   margin-bottom: 20px;
