--- a/style.css
+++ b/style.css
@@ -637,9 +637,9 @@ h6 {
 
 .career-top__text {
   display: block;
-  text-align: center;  
   font-weight: 700;
   font-size: 14px;
+  text-align: center;
   margin-bottom: 20px;
 }
 
@@ -673,7 +673,12 @@ h6 {
   z-index: 11111;
 }
 
+.swiper-person-slide:nth-child(2) .swiper-person__info .swiper-person__img {
+  left: -15px;
+}
+
 .swiper-person__shadow {
+  display: none;
   position: absolute;
   width: 150px;
   height: 150px;
@@ -683,6 +688,12 @@ h6 {
   top: 75%;
   left: 50%;
   transform: translate(-50%, -50%);
+  animation: forwards 8s animeGalo;
+  -webkit-animation: forwards 8s animeGalo;
+}
+
+.anime {
+  display: block;
 }
 
 .swiper-person__decor::after {
@@ -759,6 +770,8 @@ h6 {
   -webkit-filter: blur(71px);
   left: 0%;
   top: 8%;
+  animation: animeDecor infinite 15s;
+  -webkit-animation: animeDecor infinite 15s;
 }
 
 .info__bg-decor:nth-child(2) {
@@ -770,8 +783,33 @@ h6 {
   -webkit-filter: blur(140px);
   left: 25%;
   top: -10%;
+  animation: animeDecor infinite 15s;
+  -webkit-animation: animeDecor infinite 15s;
 }
 
+@keyframes animeDecor {
+  0% {
+    transform: rotate(360deg) scale(0.8);
+    -webkit-transform: rotate(360deg) scale(0.8);
+    -moz-transform: rotate(360deg) scale(0.8);
+    -ms-transform: rotate(360deg) scale(0.8);
+    -o-transform: rotate(360deg) scale(0.8);
+  }
+  50% {
+    transform: scale(1.5);
+    -webkit-transform: scale(1.5);
+    -moz-transform: scale(1.5);
+    -ms-transform: scale(1.5);
+    -o-transform: scale(1.5);
+  }
+  100% {
+    transform: rotate(360deg) scale(1);
+    -webkit-transform: rotate(360deg) scale(1);
+    -moz-transform: rotate(360deg) scale(1);
+    -ms-transform: rotate(360deg) scale(1);
+    -o-transform: rotate(360deg) scale(1);
+  }
+}
 .info__wrapper {
   position: relative;
   z-index: 100;
@@ -1451,6 +1489,34 @@ h6 {
   .social__list {
     justify-content: center;
   }
+  @keyframes animeGalo {
+    0% {
+      transform: scale(0.1) rotate(360deg);
+      -webkit-transform: scale(0.1) rotate(360deg);
+      -moz-transform: scale(0.1) rotate(360deg);
+      -ms-transform: scale(0.1) rotate(360deg);
+      -o-transform: scale(0.1) rotate(360deg);
+    }
+    50% {
+      transform: scale(0.2) rotate(360deg);
+      -webkit-transform: scale(0.2) rotate(360deg);
+      -moz-transform: scale(0.2) rotate(360deg);
+      -ms-transform: scale(0.2) rotate(360deg);
+      -o-transform: scale(0.2) rotate(360deg);
+    }
+    100% {
+      top: -20px;
+      width: 170px;
+      height: 170px;
+      left: 15%;
+      box-shadow: #ff0000 0 -40px 60px;
+      transform: scale(1) rotate(-360deg);
+      -webkit-transform: scale(1) rotate(-360deg);
+      -moz-transform: scale(1) rotate(-360deg);
+      -ms-transform: scale(1) rotate(-360deg);
+      -o-transform: scale(1) rotate(-360deg);
+    }
+  }
 }
 @media (min-width: 992px) {
   .about__list {
@@ -1504,12 +1570,40 @@ h6 {
     padding-left: 200px;
   }
   .swiper-person__shadow {
-    left: 82%;
+    left: 52%;
   }
   .career {
     min-height: 0;
   }
   .career__wrapper {
     padding-bottom: 10px;
+  }
+  @keyframes animeGalo {
+    0% {
+      transform: scale(0.1) rotate(360deg);
+      -webkit-transform: scale(0.1) rotate(360deg);
+      -moz-transform: scale(0.1) rotate(360deg);
+      -ms-transform: scale(0.1) rotate(360deg);
+      -o-transform: scale(0.1) rotate(360deg);
+    }
+    50% {
+      transform: scale(0.2) rotate(360deg);
+      -webkit-transform: scale(0.2) rotate(360deg);
+      -moz-transform: scale(0.2) rotate(360deg);
+      -ms-transform: scale(0.2) rotate(360deg);
+      -o-transform: scale(0.2) rotate(360deg);
+    }
+    100% {
+      top: -20px;
+      width: 170px;
+      height: 170px;
+      left: 71%;
+      box-shadow: #ff0000 0 -40px 60px;
+      transform: scale(1) rotate(-360deg);
+      -webkit-transform: scale(1) rotate(-360deg);
+      -moz-transform: scale(1) rotate(-360deg);
+      -ms-transform: scale(1) rotate(-360deg);
+      -o-transform: scale(1) rotate(-360deg);
+    }
   }
 }
