--- a/style.css
+++ b/style.css
@@ -770,8 +770,8 @@ h6 {
   -webkit-filter: blur(71px);
   left: 0%;
   top: 8%;
-  animation: animeDecor infinite 15s;
-  -webkit-animation: animeDecor infinite 15s;
+  animation: animeDecor infinite 33s;
+  -webkit-animation: animeDecor infinite 33s;
 }
 
 .info__bg-decor:nth-child(2) {
@@ -788,27 +788,30 @@ h6 {
 }
 
 @keyframes animeDecor {
-  0% {
-    transform: rotate(360deg) scale(0.8);
-    -webkit-transform: rotate(360deg) scale(0.8);
-    -moz-transform: rotate(360deg) scale(0.8);
-    -ms-transform: rotate(360deg) scale(0.8);
-    -o-transform: rotate(360deg) scale(0.8);
-  }
-  50% {
-    transform: scale(1.5);
-    -webkit-transform: scale(1.5);
-    -moz-transform: scale(1.5);
-    -ms-transform: scale(1.5);
-    -o-transform: scale(1.5);
-  }
-  100% {
-    transform: rotate(360deg) scale(1);
-    -webkit-transform: rotate(360deg) scale(1);
-    -moz-transform: rotate(360deg) scale(1);
-    -ms-transform: rotate(360deg) scale(1);
-    -o-transform: rotate(360deg) scale(1);
-  }
+    0% {
+        transform: rotate(360deg) scale(1);
+        -webkit-transform: rotate(360deg) scale(1);
+        -moz-transform: rotate(360deg) scale(1);
+        -ms-transform: rotate(360deg) scale(1);
+        -o-transform: rotate(360deg) scale(1);
+    }
+
+    50% {
+        transform: scale(2.5);
+        -webkit-transform: scale(2.5);
+        -moz-transform: scale(2.5);
+        -ms-transform: scale(2.5);
+        -o-transform: scale(2.5);
+        background-color: ;
+    }
+
+    100% {
+        transform: rotate(360deg) scale(1);
+        -webkit-transform: rotate(360deg) scale(1);
+        -moz-transform: rotate(360deg) scale(1);
+        -ms-transform: rotate(360deg) scale(1);
+        -o-transform: rotate(360deg) scale(1);
+    }
 }
 .info__wrapper {
   position: relative;
